# cpp_chess

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  README.MD  STATUS.md  conanfile.txt  no_borders?  note.md
.cursor/: hooks.json
.cursor/hooks/: format-cpp.sh
.cursor/rules/: cpp-chess-core.mdc  cpp-files.mdc
cli/: main.cpp
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
include/: chess_engine.hpp  engine.hpp
include/ai/: evaluate.hpp  search.hpp
include/board/: board_12x12.hpp  board_8x8.hpp  board_common.hpp  board_concept.hpp
include/game/: attack.hpp  board_display.hpp  en_passant.hpp  game_api.hpp  game_context.hpp  game_state.hpp  move_list.hpp  move_validator.hpp  setup.hpp  square.hpp  terminal_style.hpp
include/type/: chess_piece.hpp
src/: main.cpp  test_file.cpp
src/board/: board_12x12.cpp  board_8x8.cpp
test/: test_ai.cpp  test_board.cpp  test_main.cpp  test_moves.cpp
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: App.vue  api.js  gameSocket.js
web/frontend/src/assets/: main.css
web/frontend/src/components/: ChessBoard.vue
web/public/: app.js  index.html  style.css
web/server/: main.cpp
